--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <!-- bootstrap stylesheet  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- custom Styles -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -27,31 +29,31 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
                     </ul>
 
                 </div>
             </div>
         </nav>
-        <!-- image slider  -->
+        <!-- image slider carosel -->
         <section class="container">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
+                <div class="carousel-inner panda-bg-info">
                     <div class="carousel-item active">
-                        <div class="row p-5 d-flex rounded-3 align-items-center bg-info bg-gradient ">
+                        <div class="row p-5 d-flex rounded-3 align-items-center bg-gradient ">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world</p>
                                 <h1>$420</h1>
-                                <button type="button" class="btn btn-danger">Buy Now</button>
+                                <button type="button" class="panda-btn-buy-now">Buy Now >></button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -60,13 +62,13 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 d-flex rounded align-items-center bg-info bg-gradient ">
+                        <div class="row p-5 d-flex rounded align-items-center  bg-gradient ">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p> This is the best tv in the world for people who just want to waste time in front of
                                     tv</p>
                                 <h1>$1200</h1>
-                                <button type="button" class="btn btn-danger">Buy Now</button>
+                                <button type="button" class="panda-btn-buy-now">Buy Now >></button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -74,13 +76,13 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row p-5 d-flex rounded align-items-center bg-info bg-gradient ">
+                        <div class="row p-5 d-flex rounded align-items-center bg-gradient ">
                             <div class="col-lg-7">
                                 <h1>X-Box For Your Gamming</h1>
                                 <p>This is the best X-box in the world for people who just want to waste time in front
                                     of funky world</p>
                                 <h1>$600</h1>
-                                <button type="button" class="btn btn-danger">Buy Now</button>
+                                <button type="button" class="">Buy Now >></button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -103,23 +105,23 @@
     </header>
     <main>
         <!-- catagories -->
-        <section class="container my-5">
+        <section class="container my-5 catagories">
 
             <div class="row g-4">
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                <div class="col-lg-4 col-md-6 col-12 ">
+                    <div class="p-3 border panda-watch d-flex align-items-center justify-content-between rounded-3 ">
                         <h1 class="text-white">Watch</h1>
                         <img src="images/categories/watch.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
-                        <h1 class="text-white">bag</h1>
+                    <div class="p-3 border panda-bag d-flex align-items-center justify-content-between rounded-3 ">
+                        <h1 class="text-white">Bag</h1>
                         <img src="images/categories/bag.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                    <div class="p-3 border panda-shoes d-flex align-items-center justify-content-between rounded-3">
                         <h1 class="text-white">Shoes</h1>
                         <img src="images/categories/shoes.png" alt="">
                     </div>
@@ -129,7 +131,7 @@
 
         <!-- Shoes -->
 
-        <section class="container">
+        <section class="container" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -142,7 +144,7 @@
                             <h4>$120</h4>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-danger">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -156,7 +158,7 @@
                             <h4>$320</h4>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-danger">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -171,7 +173,7 @@
                             <h4>$350</h4>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-danger">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -182,7 +184,7 @@
         <!-- Backpack -->
 
 
-        <section class="container my-5">
+        <section class="container my-5" id="backpack">
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -195,7 +197,7 @@
                             <h4>$120</h4>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-danger">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -209,7 +211,7 @@
                             <h4>$220</h4>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-danger">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
@@ -224,20 +226,22 @@
                             <h4>$170</h4>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-danger">Buy Now</button>
+                            <button class="panda-btn-buy-now">Buy Now >></button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <!-- subscribe -->
-        <section style="height: 300px;"
-            class="comtainer rounded-3 bg-info d-flex align-items-center justify-content-center">
+
+        <section style="height: 300px;" id="subscribe"
+            class="comtainer rounded-3 panda-bg-info d-flex align-items-center justify-content-center">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, Specials & more</p>
-                <input type="text" placeholder="Your E-mail"><br>
-                <button class="btn btn-danger">SUBMIT</button>
+                <input class="form-control" type="text" placeholder="Your Email"><br>
+                <button class="panda-btn-buy-now">SUBMIT</button>
             </div>
         </section>
     </main>
